assets/css/style.css
* {
    box-sizing: border-box;
    padding: .5%;
    margin: 0%;
    color: aliceblue;
    font-family: "proxima nova","times new roman",serif;
}

body {
    background-color: rgb(32, 10, 96);
}

/* Header begin */
.header {
    background-color: rgba(139, 0, 139, 0.714);
    border-style: solid;
    border-width: 4px;
    border-color: rgba(74, 0, 139, 0.56);
    padding-left: 2%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

.header div {
    display: flex;
    align-items: center;
}

h1 {
    padding-left: 4%;
}

#portrait {
    height: 70px;
    object-fit: contain;
    padding: 0;
    border: 3px solid;
    border-radius: 50%;
    border-color: darkmagenta;
}    

/* Navbar begin */
nav ul {
    list-style-type: none;
    display: flex;
    
}

nav ul li {
    border-right: 1px solid;
    font-size: 13pt;
}

nav ul li:last-child {
    border-right: none;
}

a {
    text-decoration: none;
    padding: 5px;
}

a:hover {
    background-color: rgba(0, 206, 209, 0.659);
}

/* Banner image begin*/
#sunset {
    height: 100%;
    width: 100%;
    background-image: url("./images/Sunset.gif");
    padding: 0;
}

/* Main begin */
h2 {
    float: left;
    padding-left: 5%;
    margin-bottom: 1%;
    clear: both;
}

section {
    border-left: 1px solid;
    padding-left: 3%;
    margin-bottom: 1%;
}

/* About Me begin */
#about-me {
    display: flex;
    flex-wrap: wrap;
    float: right;
    width: 80%;
    }

p {
    text-align: justify;
}
    
/* Work begin */
.image-box {
    background-color: darkmagenta;
}

#work1 {
    display: flex;
    flex-wrap: wrap;
    float: right;
    width: 80%;
}

#work2, #work3, #work4, #work5 {
    width: 50%;
}

#work1-text, #work2-text, #work3-text, #work4-text, #work5-text {
    background-color: rgba(139, 0, 139, 0.714);
    border: 1px solid;
    border-color: darkmagenta;
}

/* Contact Me begin */
#contact-me {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    text-decoration: underline;
    float: right;
    width: 80%;
}

@media screen and (max-width: 768px) {
    header {
      flex-direction: column;
    }
  
    main {
      max-width: 1200px;
    }
  }

